--- a/src/app/form-offline/form-offline.component.html
+++ b/src/app/form-offline/form-offline.component.html
@@ -117,12 +117,12 @@
                         <i class="fas fa-mobile-alt"></i>Celular</div>
                     </div>
                    <!-- desktop -->
-                   <input type="tel" class="form-control desktop tel-mask" mask="(00) 0000-00009" placeholder="Vamos falar com você por aqui!"
-                   [(ngModel)]="user.cellphone" formControlName="cellphone" name="cellphone" (blur)="checkPhone()" required>
+                   <input type="tel" class="form-control desktop tel-mask" mask="{{ cellphoneMask }}" placeholder="Vamos falar com você por aqui!"
+                   [(ngModel)]="user.cellphone" formControlName="cellphone" name="cellphone" (keydown)='checkMaskCellphone($event)' (blur)="checkPhone()" required>
                  <!-- mobile -->
                  <i class="fas fa-mobile-alt mobile mobile-icon"></i>
-                 <input type="tel" class="form-control mobile tel-mask" mask="(00) 00000-00009" placeholder="Celular" [(ngModel)]="user.cellphone"
-                   formControlName="cellphone" name="cellphone" (blur)="checkPhone()" required>
+                 <input type="tel" class="form-control mobile tel-mask" mask="{{ cellphoneMask }}" placeholder="Celular" [(ngModel)]="user.cellphone"
+                   formControlName="cellphone" name="cellphone" (blur)="checkPhone()"  (keydown)='checkMaskCellphone($event)' required>
                     <div class="valid-feedback">
                       <i class="fas fa-check"></i>
                     </div>
