--- a/src/app/form-ge/form-ge.component.html
+++ b/src/app/form-ge/form-ge.component.html
@@ -241,8 +241,7 @@
                   </div>
                 </div> -->
                 <!-- <div *ngIf="+user.scholarity.id >= 2 && +user.scholarity.id != 6" class="animated fadeIn faster"> -->
-                <div class="animated fadeIn faster">
-                  <div class="form-group city">
+                  <div class="animated fadeIn faster form-group city">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -262,7 +261,7 @@
                       Por favor, selecione sua cidade
                     </div>
                   </div>
-                  <div class="form-group university" *ngIf='user.city.name'>
+                  <div class="animated fadeIn faster form-group university" *ngIf='user.city.name'>
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -281,7 +280,7 @@
                       Selecione uma universidade.
                     </div>
                   </div>
-                  <div class="form-group" *ngIf='showOtherUniversityField && user.city && user.university'>
+                  <div class="animated fadeIn faster form-group" *ngIf='showOtherUniversityField && user.city && user.university'>
                     <div class="input-group">
                       <div class="input-group-prepend desktop">
                         <div class="input-group-text">
@@ -303,7 +302,7 @@
                       Por favor, digite uma universidade válida.
                     </div>
                   </div>
-                  <div class="form-group college_course">
+                  <div class="animated fadeIn faster form-group college_course">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -323,7 +322,6 @@
                       Selecione um curso.
                     </div>
                   </div>
-                </div>
                 <div class="form-group english_level">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
