--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -238,8 +238,7 @@
                   </div>
                 </div> -->
                 <!-- <div *ngIf="user.scholarity.id>= 2 && user.scholarity.id != 6" class="animated fadeIn faster"> -->
-                <div class="animated fadeIn faster">
-                  <div class="form-group university" *ngIf='user.city.name'>
+                  <div class="animated fadeIn faster form-group university" *ngIf='user.city.name'>
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -258,7 +257,7 @@
                       Selecione uma universidade.
                     </div>
                   </div>
-                  <div class="form-group" *ngIf='showOtherUniversityField && user.city && user.university'>
+                  <div class="form-group animated fadeIn faster" *ngIf='showOtherUniversityField && user.city && user.university'>
                     <div class="input-group">
                       <div class="input-group-prepend desktop">
                         <div class="input-group-text">
@@ -280,7 +279,7 @@
                       Por favor, digite uma universidade válida.
                     </div>
                   </div>
-                  <div class="form-group college_course">
+                  <div class="form-group animated fadeIn faster college_course">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -299,7 +298,6 @@
                       Selecione um curso.
                     </div>
                   </div>
-                </div>
                 <div class="form-group  english_level">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
