--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -238,8 +238,7 @@
                   </div>
                 </div> -->
                 <!-- <div *ngIf="user.scholarity.id >= 2 && user.scholarity.id != 6 && user.city" class="animated fadeIn faster"> -->
-                <div class="animated fadeIn faster">
-                  <div class="form-group  university" *ngIf='user.city.name'>
+                  <div class="animated fadeIn faster form-group  university" *ngIf='user.city.name'>
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -258,7 +257,7 @@
                       Selecione uma universidade.
                     </div>
                   </div>
-                  <div class="form-group" *ngIf='showOtherUniversityField && user.city && user.university'>
+                  <div class="animated fadeIn faster form-group" *ngIf='showOtherUniversityField && user.city && user.university'>
                     <div class="input-group">
                       <div class="input-group-prepend desktop">
                         <div class="input-group-text">
@@ -281,7 +280,7 @@
                       Por favor, digite uma universidade válida.
                     </div>
                   </div>
-                  <div class="form-group college_course">
+                  <div class=" animated fadeIn faster form-group college_course">
                     <div class="input-group select-dropdown">
                       <div class="input-group-prepend">
                         <div class="input-group-text">
@@ -301,7 +300,6 @@
                       Selecione um curso.
                     </div>
                   </div>
-                </div>
                 <div class="form-group experiences-input">
                   <div class="input-group select-dropdown">
                     <div class="input-group-prepend">
