--- a/src/app/landing-page-menu/landing-page-menu.component.html
+++ b/src/app/landing-page-menu/landing-page-menu.component.html
@@ -77,7 +77,7 @@
                 </a>
                 <a href="https://www.assistcard.com/br/b2c/aiesec-br">
                   <li>
-                    Seguro Saúde
+                    Seguro Viagem
                   </li>
                 </a>
               </ul>
@@ -155,7 +155,7 @@
                 </a>
                 <a href="https://www.assistcard.com/br/b2c/aiesec-br">
                   <li>
-                    Seguro Saúde
+                    Seguro Viagem
                   </li>
                 </a>
               </ul>
