feat(landing page): membrasia section added with images jpg/webp

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -225,6 +225,22 @@
     </div>
   </section>
 
+   <section class='membrasia'>
+    <div class='bg-membrasia'></div>
+    <div class='container'>
+      <div class='row'>
+        <div class="col-12">
+          <p>
+            Junte-se a nós como
+            <b>membro</b> da AIESEC, promovendo experiências de intercâmbio que mudam o mundo!
+            <br> Participe do nosso
+            <b>Processo Seletivo!</b>
+          </p>
+          <a class='btn btn-primary' target='_blank' href='http://promo.aiesec.org.br/sejamembro/'> Inscreva-se aqui </a>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="row meet-our-programs-session">
     <div id="meet-our-programs-session-bg"></div>
