--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -433,6 +433,44 @@ div#our-stories {
     font-size: 12px;
 }
 
+.membrasia{
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 30%;
+    padding: 90px 0;
+    @at-root :host-context(.no-webp) #{&} {
+        background-image: url('/assets/images/membrasia.jpg');
+    }
+    @at-root :host-context(.webp) #{&} {
+        background-image: url('/assets/images/membrasia.webp');
+    }
+    .bg-membrasia {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        background-color: rgba(0,0,0,.55);
+        left: 0;
+        top: 0;
+    }
+    div {
+        z-index: 1;
+        &.container {
+            z-index: 2;
+        }
+        p {
+            font-weight: lighter;
+            color: #fff;
+            max-width: 45%;
+            font-size: 1.3em;
+            margin: 10px 0;
+            b {
+                font-weight: bold;
+            }
+        }
+    }
+}
+
 .meet-our-programs-session {
     color: white;
     font-size: 30px;
