--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -7,7 +7,7 @@
       <div class="bg-content">
         <picture>
           <source srcset="../../assets/images/logo-voluntario-global.png.webp" type="image/webp">
-          <source srcset="../../assets/images/logo-voluntario-global.png" type="image/png"> 
+          <source srcset="../../assets/images/logo-voluntario-global.png" type="image/png">
           <img src="../../assets/images/logo-voluntario-global.png">
         </picture>
         <p class="desktop">
@@ -60,9 +60,9 @@
       <div class="bg-content">
         <picture>
           <source srcset="../../assets/images/logo-empreendedor-global.png.webp" type="image/webp">
-          <source srcset="../../assets/images/logo-empreendedor-global.png" type="image/png"> 
+          <source srcset="../../assets/images/logo-empreendedor-global.png" type="image/png">
           <img src="../../assets/images/logo-empreendedor-global.png">
-        </picture>        
+        </picture>
         <p class="desktop">
           Assuma os desafios de trabalhar em uma
           <br> Startup e se desenvolva como um lider
@@ -113,9 +113,9 @@
       <div class="bg-content">
         <picture>
           <source srcset="../../assets/images/logo-talentos-globais.png.webp" type="image/webp">
-          <source srcset="../../assets/images/logo-talentos-globais.png" type="image/png"> 
+          <source srcset="../../assets/images/logo-talentos-globais.png" type="image/png">
           <img src="../../assets/images/logo-talentos-globais.png">
-        </picture>        
+        </picture>
         <p class="desktop">
           Agregue diferencial ao seu currículo
           <br> com essa experiência enriquecedora.
@@ -193,9 +193,9 @@
             <div class="col-sm align-center">
               <picture>
                 <source srcset="../../assets/images/icon-world.png.webp" type="image/webp" class="coin">
-                <source srcset="../../assets/images/icon-world.png" type="image/png" class="coin"> 
+                <source srcset="../../assets/images/icon-world.png" type="image/png" class="coin">
                 <img src="../../assets/images/icon-world.png" class="coin">
-              </picture>              
+              </picture>
               <p class="coin-text">Presente em
                 <br>
                 <strong>+120 países</strong>
@@ -206,7 +206,7 @@
                 <source srcset="../../assets/images/icon-books.png.webp" type="image/webp" class="coin">
                 <source srcset="../../assets/images/icon-books.png" type="image/png" class="coin">
                 <img src="../../assets/images/icon-books.png" class="coin">
-              </picture>              
+              </picture>
               <p class="coin-text">+12.000 intercâmbios
                 <br> por ano</p>
             </div>
@@ -225,7 +225,7 @@
     </div>
   </section>
 
-   <section class='membrasia'>
+  <section class='membrasia'>
     <div class='bg-membrasia'></div>
     <div class='container'>
       <div class='row'>
@@ -239,19 +239,6 @@
           <a class='btn btn-primary' target='_blank' href='http://promo.aiesec.org.br/sejamembro/'> Inscreva-se aqui </a>
         </div>
       </div>
-    </div>
-  </section>
-
-  <section class="row meet-our-programs-session">
-    <div id="meet-our-programs-session-bg"></div>
-    <div class="col-sm align-center meet-our-programs-content padding">
-      <p class="align-center margin">
-        O modelo de desenvolvimento de liderança da
-        <strong>AIESEC</strong> prepara jovens para defenderem aquilo que eles acreditam
-        <br> e os torna capazes de fazer a
-        <strong>diferença</strong> todos os dias.
-      </p>
-      <button type="button" class="btn btn-light" (click)="scrollToGlobal()">Conheça nossos programas</button>
     </div>
   </section>
 
@@ -294,6 +281,15 @@
         </div>
         <div class="col-lg-5 col-sm-12 col-md-12 LDM">
         </div>
+        <div class="col-12 secundary-text">
+          <h2 class="italic centered">
+            O modelo de desenvolvimento de liderança da
+            <strong>AIESEC</strong> prepara jovens para defenderem aquilo que eles <br>
+            acreditam e os torna capazes de fazer a
+            <strong>diferença</strong> todos os dias.
+          </h2>
+          <button type="button" class="btn btn-primary" (click)="scrollToGlobal()">Conheça nossos programas</button>
+        </div>
       </div>
     </div>
   </section>
@@ -304,8 +300,8 @@
       <br>
       <div class="row content-swipe-area">
         <div class="col-sm swipe-area">
-          <div class='swipe-animation' (mouseenter)="stopAnimation()"
-            (tap)='redirectTo()' (mouseleave)="sliderAnimation()" (swiperight)="swipe('right')" (swipeleft)="swipe('left')"></div>
+          <div class='swipe-animation' (mouseenter)="stopAnimation()" (tap)='redirectTo()' (mouseleave)="sliderAnimation()" (swiperight)="swipe('right')"
+            (swipeleft)="swipe('left')"></div>
           <div class="footer-carousel-btn-left">
             <i (click)="moveLeft()" class="fas fa-chevron-left"></i>
           </div>
