fix(landing-page): visual issues fixes
AIESEC-199 - https://devmagic.atlassian.net/browse/AIESEC-199

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -285,8 +285,7 @@
           <h2 class="italic centered">
             O modelo de desenvolvimento de liderança da
             <strong>AIESEC</strong> prepara jovens para defenderem aquilo que eles <br>
-            acreditam e os torna capazes de fazer a
-            <strong>diferença</strong> todos os dias.
+            acreditam e os torna capazes de <strong>fazer a diferença todos os dias.</strong>
           </h2>
           <button type="button" class="btn btn-primary" (click)="scrollToGlobal()">Conheça nossos programas</button>
         </div>
